[package]
name = "websocket_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
ecies = { version = "0.2.6", features = ["std"] }
futures = "0.3.29"
futures-channel = "0.3.29"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
